update wildfly content

--- a/_posts/2019-12-18-wildfly-ha-1.md
+++ b/_posts/2019-12-18-wildfly-ha-1.md
@@ -60,6 +60,7 @@ All this "lab" is running on the very reliable "oVirt" virtualization platform. 
 ![](/images/201912-hawildfly-01.gif)
 
 
+
 # Configuring Keepalive with Apache WebServer
 
 Let's get started by installing and configuring Keepalived and Apache Web Server high availability, and of course getting the Mod Cluster setup ready. These settings will be performed on the following servers:
@@ -76,16 +77,16 @@ Apache Web Server - apache-httpd-01.mmagnani.lab
 
 {% highlight bash %}
 [root@apache-httpd-01 ~]# cat /etc/redhat-release 
-CentOS Linux release 7.7.1908 (Core)
-[root@apache-httpd-01 ~]# yum update -y
-[root@apache-httpd-01 ~]# yum install httpd -y
+CentOS Linux release 8.2.2004 (Core)
+[root@apache-httpd-01 ~]# dnf update -y
+[root@apache-httpd-01 ~]# dnf install httpd -y
 [root@apache-httpd-01 ~]# echo "Web Server 01" > /var/www/html/index.html
 [root@apache-httpd-01 ~]# systemctl enable httpd
 [root@apache-httpd-01 ~]# systemctl stop firewalld
 [root@apache-httpd-01 ~]# systemctl disable firewalld
 [root@apache-httpd-01 ~]# setenforce 0
 [root@apache-httpd-01 ~]# sed -i "s/^SELINUX=enforcing/SELINUX=disabled/g" /etc/selinux/config
-[root@apache-httpd-01 ~]# yum install keepalived -y
+[root@apache-httpd-01 ~]# dnf install keepalived -y
 [root@apache-httpd-01 ~]# systemctl enable keepalived
 [root@apache-httpd-01 ~]# rm -Rf /etc/keepalived/keepalived.conf
 {% endhighlight %}
@@ -102,7 +103,7 @@ vrrp_script chk_httpd {
 }
 vrrp_instance VI_1 {
 
-  interface eth0
+  interface ens3
   state MASTER
   advert_int 2
   virtual_router_id 51
@@ -112,10 +113,10 @@ vrrp_instance VI_1 {
     auth_type PASS
     auth_pass SimplePassword
   }
-  unicast_src_ip addr:10.0.0.93
+  unicast_src_ip addr:10.0.0.191
   unicast_peer {
 
-    10.0.0.94
+    10.0.0.192
   }
   track_script {
 
@@ -123,7 +124,7 @@ vrrp_instance VI_1 {
   }
   virtual_ipaddress {
 
-    10.0.0.90
+    10.0.0.190
   }
 }
 [root@apache-httpd-01 ~]# systemctl restart httpd 
@@ -134,16 +135,16 @@ Apache Web Server - apache-httpd-02.mmagnani.lab
 
 {% highlight bash %}
 [root@apache-httpd-02 ~]# cat /etc/redhat-release 
-CentOS Linux release 7.7.1908 (Core)
-[root@apache-httpd-02 ~]# yum update -y
-[root@apache-httpd-02 ~]# yum install httpd -y
+CentOS Linux release 8.2.2004 (Core)
+[root@apache-httpd-02 ~]# dnf update -y
+[root@apache-httpd-02 ~]# dnf install httpd -y
 [root@apache-httpd-01 ~]# echo "Web Server 02" > /var/www/html/index.html
 [root@apache-httpd-02 ~]# systemctl enable httpd
 [root@apache-httpd-02 ~]# systemctl stop firewalld
 [root@apache-httpd-02 ~]# systemctl disable firewalld
 [root@apache-httpd-02 ~]# setenforce 0
 [root@apache-httpd-02 ~]# sed -i "s/^SELINUX=enforcing/SELINUX=disabled/g" /etc/selinux/config
-[root@apache-httpd-02 ~]# yum install keepalived -y
+[root@apache-httpd-02 ~]# dnf install keepalived -y
 [root@apache-httpd-02 ~]# systemctl enable keepalived
 [root@apache-httpd-02 ~]# rm -Rf /etc/keepalived/keepalived.conf
 {% endhighlight %}
@@ -160,7 +161,7 @@ vrrp_script chk_httpd {
 }
 vrrp_instance VI_1 {
 
-  interface eth0
+  interface ens3
   state BACKUP
   advert_int 2
   virtual_router_id 51
@@ -170,10 +171,10 @@ vrrp_instance VI_1 {
     auth_type PASS
     auth_pass SimplePassword
   }
-  unicast_src_ip 10.0.0.94
+  unicast_src_ip 10.0.0.192
   unicast_peer {
 
-    10.0.0.93
+    10.0.0.191
   }
   track_script {
 
@@ -181,14 +182,14 @@ vrrp_instance VI_1 {
   }
   virtual_ipaddress {
 
-    10.0.0.90
+    10.0.0.190
   }
 }
 [root@apache-httpd-02 ~]# systemctl restart httpd 
 [root@apache-httpd-02 ~]# systemctl restart keepalived 
 {% endhighlight %}
 
-Now open the browser and enter the VIP IP which in this case is 10.0.0.90. Note that the request was directed to Apache Web Server 01.
+Now open the browser and enter the VIP IP which in this case is 10.0.0.190. Note that the request was directed to Apache Web Server 01.
 
 ![](/images/201912-hawildfly-03.png)
 
@@ -204,10 +205,10 @@ Next we'll start Mod_cluster configuration and plug it in WildFly.
 
 ## Compiling and Configuring Mod Cluster
 
-The best way to get updated binaries for CentoS 7 is by compiling. I know this can cause some stress but follow the steps below that everything will be very simple.
+The best way to get updated binaries for CentoS 8 is by compiling. I know this can cause some stress but follow the steps below that everything will be very simple.
 
 {% highlight bash %}
-[root@apache-httpd-01 ~]# yum install git cmake gcc gcc-c++ apt-util apr-devel apr-util-devel httpd-devel -y
+[root@apache-httpd-01 ~]# dnf install git make cmake gcc gcc-c++ apr-util apr-devel apr-util-devel httpd-devel -y
 [root@apache-httpd-01 ~]# cd /tmp
 [root@apache-httpd-01 ~]# git clone https://github.com/modcluster/mod_cluster.git
 [root@apache-httpd-01 ~]# cd mod_cluster
@@ -216,12 +217,6 @@ The best way to get updated binaries for CentoS 7 is by compiling. I know this c
 [root@apache-httpd-01 ~]# mkdir build
 [root@apache-httpd-01 ~]# cd build
 [root@apache-httpd-01 build]# cmake ../ -G "Unix Makefiles"
--- Found APR: /usr/lib64/libapr-1.so
--- Found APRUTIL: /usr/lib64/libaprutil-1.so
--- Found APACHE: /usr/include/httpd  
--- Configuring done
--- Generating done
--- Build files have been written to: /tmp/mod_proxy_cluster/native/build
 [root@apache-httpd-01 build]# make
 {% endhighlight %}
 
@@ -239,10 +234,10 @@ Copy the newly built modules to the Apache Web Server module directory:
 These same files must be copied to the Apache Web Server 02 module directory.
 
 {% highlight bash %}
-[root@apache-httpd-01 ~]# scp modules/mod_cluster_slotmem.so root@apache-httpd-02.mmagnani.lab:/etc/httpd/modules/
-[root@apache-httpd-01 ~]# scp modules/mod_proxy_cluster.so root@apache-httpd-02.mmagnani.lab:/etc/httpd/modules/
-[root@apache-httpd-01 ~]# scp modules/mod_manager.so root@apache-httpd-02.mmagnani.lab:/etc/httpd/modules/
-[root@apache-httpd-01 ~]# scp modules/mod_advertise.so root@apache-httpd-02.mmagnani.lab:/etc/httpd/modules/
+[root@apache-httpd-01 ~]# scp modules/mod_cluster_slotmem.so root@10.0.0.192:/etc/httpd/modules/
+[root@apache-httpd-01 ~]# scp modules/mod_proxy_cluster.so root@10.0.0.192:/etc/httpd/modules/
+[root@apache-httpd-01 ~]# scp modules/mod_manager.so root@10.0.0.192:/etc/httpd/modules/
+[root@apache-httpd-01 ~]# scp modules/mod_advertise.so root@10.0.0.192:/etc/httpd/modules/
 {% endhighlight %}
 
 The mod_proxy_balancer should be disabled when mod_cluster is used. To do this simply on Apache Web Server 01 edit the 00-proxy.conf  file and comment the line referring to this module.
@@ -262,7 +257,7 @@ Do the same for Apache Web Server 02:
 Now is the time to create the Mod_Cluster configuration file. On Apache Web Server 01 create the file mod_cluster.conf and add the configuration information:
 
 {% highlight bash %}
-[root@apache-httpd-01 ~]# /etc/httpd/conf.d/mod_cluster.conf
+[root@apache-httpd-01 ~]# vi /etc/httpd/conf.d/mod_cluster.conf
 LoadModule proxy_cluster_module modules/mod_proxy_cluster.so
 LoadModule cluster_slotmem_module modules/mod_cluster_slotmem.so
 LoadModule manager_module modules/mod_manager.so
@@ -307,7 +302,7 @@ MemManagerFile cache/mod_cluster
 Now copy the file to Apache Web Server 02.
 
 {% highlight bash %}
-[root@apache-httpd-01 ~]# scp /etc/httpd/conf.d/mod_cluster.conf root@apache-httpd-02.mmagnani.lab:/etc/httpd/conf.d/
+[root@apache-httpd-01 ~]# scp /etc/httpd/conf.d/mod_cluster.conf root@10.0.0.192:/etc/httpd/conf.d/
 {% endhighlight %}
 
 reboot both servers to make sure everything is going up correctly.
@@ -320,12 +315,8 @@ reboot both servers to make sure everything is going up correctly.
 [root@apache-httpd-02 ~]# reboot
 {% endhighlight %}
 
-Access the VIP IP again on the Mod Cluster port and context: http://10.0.0.90:9090/mod_cluster_manager. Note that Mod Cluster settings have been loaded successfully.
+Access the VIP IP again on the Mod Cluster port and context: http://10.0.0.190:9090/mod_cluster_manager. Note that Mod Cluster settings have been loaded successfully.
 
 ![](/images/201912-hawildfly-05.png)
 
 The first part of the setup is done. I know it's not cool to disable selinux / firewalld but I really wanted to make our life easier here. Please in a production environment make the settings properly.
-
-See you in the next chapter.
-
-Best,
