--- a/_posts/2019-12-21-wildfly-ha-3.md
+++ b/_posts/2019-12-21-wildfly-ha-3.md
@@ -12,14 +12,14 @@ Below are the chapters I and II:
 
 ##  WildFly with Mod Cluster
 
-If you followed the previous chapters, you will now have Apach Web Server HA in your environment as well as WildFly running in Domain Mode with four WildFly instances.
+If you followed the previous articles, you will now have Apach Web Server HA in your environment as well as WildFly running in Domain Mode with four WildFly instances.
 
-The first step will be to add two new properties to our WildFly instances. The properties must be added within each instance (server). So let's start by editing the host-slave.xml file in "Slave 0". 
+The first step will be to add two new properties to our WildFly instances. The properties must be added within each instance (server). So let's start by editing the host-slave.xml file in "Subordinate 0". 
 
 {% highlight bash %}
-[root@server-slave-0 ~]# pwd
-/usr/local/wildfly/wildfly-18.0.1.Final
-[root@server-slave-0 ~]# vi slave0/configuration/host-slave.xml 
+[root@server-subordinate-0 ~]# pwd
+/usr/local/wildfly/wildfly-20.0.0.Final
+[root@server-subordinate-0 ~]# vim subordinate0/configuration/host-slave.xml 
 {% endhighlight %}
 
 {% highlight xml %}
@@ -42,12 +42,12 @@ The first step will be to add two new properties to our WildFly instances. The p
 ##suppressed
 {% endhighlight %}
 
-Now perform the same procedure for "Slave1".
+Now perform the same procedure for "Subordinate 1".
 
 {% highlight bash %}
-[root@server-slave-1 ~]# pwd
-/usr/local/wildfly/wildfly-18.0.1.Final
-[root@server-slave-1 ~]# vi slave1/configuration/host-slave.xml 
+[root@server-subordinate-1 ~]# pwd
+/usr/local/wildfly/wildfly-20.0.0.Final
+[root@server-subordinate-1 ~]# vim subordinate1/configuration/host-slave.xml 
 {% endhighlight %}
 
 {% highlight xml %}
@@ -76,14 +76,14 @@ Then in the "Master" edit the domain.xml file and add a new socket with our VIP 
 
 {% highlight bash %}
 [root@server-domain ~]# pwd
-/usr/local/wildfly/wildfly-18.0.1.Final
-[root@server-domain ~]# vi master/configuration/domain.xml 
+/usr/local/wildfly/wildfly-20.0.0.Final
+[root@server-domain ~]# vim master/configuration/domain.xml 
 {% endhighlight %}
 
 {% highlight xml %}
-##around line 1880 // full-ha-sockets
+##around line 1883 // full-ha-sockets
         <outbound-socket-binding name="proxy">
-            <remote-destination host="10.0.0.90" port="9090"/>
+            <remote-destination host="10.0.0.190" port="9090"/>
         </outbound-socket-binding>
 ##suppressed
 {% endhighlight %}
@@ -91,41 +91,41 @@ Then in the "Master" edit the domain.xml file and add a new socket with our VIP 
 Within the "full-ha" profile edit the modcluster subsystem and add the instance-id and balancer properties.
 
 {% highlight xml %}
-##around line 1658 // profile full-ha
+##around line 1661 // profile full-ha
         <proxy name="default" advertise-socket="modcluster" listener="ajp" proxies="proxy" balancer="${wildfly.balancer.name}">
 ##suppressed
 {% endhighlight %}
 
-Restart the WildFly service on the master and then on the slaves.
+Restart the wildfly service on the master and then on the subordinates.
 
 {% highlight bash %}
 [root@server-domain ~]# systemctl restart wildfly
 {% endhighlight %}
 
 {% highlight bash %}
-[root@server-slave-0 ~]# systemctl restart wildfly
+[root@server-subordinate-0 ~]# systemctl restart wildfly
 {% endhighlight %}
 
 {% highlight bash %}
-[root@server-slave-1 ~]# systemctl restart wildfly
+[root@server-subordinate-1 ~]# systemctl restart wildfly
 {% endhighlight %}
 
-Access the VIP IP on the Mod Cluster port and context: http://10.0.0.90:9090/mod_cluster_manager. See that our instances are now connected and ready to use:
+Access the VIP IP on the Mod Cluster port and context: http://10.0.0.190:9090/mod_cluster_manager. See that our instances are now connected and ready to use:
 
-![](/images/201912-hawildfly-12.png)
+![](/images/201912-hawildfly-12.gif)
 
 Deploy the [cluster.war](https://github.com/msmagnanijr/mlab-run-blog-files/blob/master/wildfly-ha/cluster.war) application. Open the management console and go to "deployments" --> "content-repository" and upload the application. After that "deploy" --> "Deploy Content" --> choose "marketing" server group.
 
-If the application is successfully deployed, you will see the context in "mod_cluster_manager": http://10.0.0.90:9090/mod_cluster_manager
+If the application is successfully deployed, you will see the context in "mod_cluster_manager": http://10.0.0.190:9090/mod_cluster_manager
 
-![](/images/201912-hawildfly-13.png)
+![](/images/201912-hawildfly-13.gif)
 
-If you try to access the "application context" (http://10.0.0.90/cluster) through VIP you will get a 404 because the virtual host for that application has not yet been configured.
+If you try to access the "application context" (http://10.0.0.190/cluster) through VIP you will get a 404 because the virtual host for that application has not yet been configured.
 
 So now let's create a new virtual host to make the application that was deployed in the "marketing" group available through VIP.
 
 {% highlight bash %}
-[root@apache-httpd-01 ~]# vi /etc/httpd/conf.d/virtual_host.conf
+[root@apache-httpd-01 ~]# vim /etc/httpd/conf.d/virtual_host.conf
 <VirtualHost *:80>
     ServerName marketing.mmagnani.lab
     ProxyPass        / balancer://marketing-lb/ stickysession=JSESSIONID|jsessionid nofailover=On
@@ -142,34 +142,34 @@ So now let's create a new virtual host to make the application that was deployed
 </VirtualHost>
 {% endhighlight %}
 
-Add an entry in your DNS for the name "marketing.mmagnani.lab" pointing to the VIP which in this case is 10.0.0.90.
+Add an entry in your DNS for the name "marketing.mmagnani.lab" pointing to the VIP which in this case is 10.0.0.190.
 
 In the "Master" edit the domain.xml file and update the default virtual host on undertow subsystem.
 
 {% highlight bash %}
 [root@server-domain ~]# pwd
-/usr/local/wildfly/wildfly-18.0.1.Final
-[root@server-domain ~]# vi master/configuration/domain.xml 
+/usr/local/wildfly/wildfly-20.0.0.Final
+[root@server-domain ~]# vim master/configuration/domain.xml 
 {% endhighlight %}
 
 {% highlight xml %}
-##around line 1735
+##around line 1739
             <host name="default-host" alias="marketing.mmagnani.lab" default-web-module="cluster.war" />
 ##suppressed
 {% endhighlight %}
 
-Restart the WildFly service on the master and then on the slaves.
+Restart the wildfly service on the master and then on the subordinates.
 
 {% highlight bash %}
 [root@server-domain ~]# systemctl restart wildfly
 {% endhighlight %}
 
 {% highlight bash %}
-[root@server-slave-0 ~]# systemctl restart wildfly
+[root@server-subordinate-0 ~]# systemctl restart wildfly
 {% endhighlight %}
 
 {% highlight bash %}
-[root@server-slave-1 ~]# systemctl restart wildfly
+[root@server-subordinate-1 ~]#  systemctl restart wildfly
 {% endhighlight %}
 
 Finally open the browser and access the application URL: http://marketing.mmagnani.lab
