update wildfly content

--- a/_posts/2019-12-21-wildfly-ha-2.md
+++ b/_posts/2019-12-21-wildfly-ha-2.md
@@ -5,7 +5,7 @@ tags: [jboss, wildfly, ha, redhat, centos, modcluster]
 comments: true
 ---
 
-In [Chapter I](http://mlab.run/2019/12/18/wildfly-ha-1), we set up the high availability of the Web layer. In this chapter we will install WildFly and configure the Master/Slave topology.
+In [Chapter I](http://mlab.run/2019/12/18/wildfly-ha-1), we set up the high availability of the Web layer. In this chapter we will install WildFly and configure the Master/Subordinate topology.
 
 ##  Install Wildfly 20
 
@@ -53,7 +53,7 @@ Check that the WildFly process has gone up correctly:
 
 {% highlight bash %}
 [root@server-domain ~]# jps -m
-1571 jboss-modules.jar -mp /usr/local/wildfly/wildfly-18.0.1.Final/modules 
+1571 jboss-modules.jar -mp /usr/local/wildfly/wildfly-20.0.0.Final/modules 
 ##supressed
 {% endhighlight %}
 
@@ -135,13 +135,13 @@ Check that the WildFly process has gone up correctly:
 
 {% highlight bash %}
 [root@server-subordinate-1 ~]# jps -m
-1948 jboss-modules.jar -mp /usr/local/wildfly/wildfly-18.0.1.Final/modules
+1948 jboss-modules.jar -mp /usr/local/wildfly/wildfly-20.0.0.Final/modules
 ##supressed
 {% endhighlight %}
 
 It is! Finally we have Wildfly running in Domain Mode on all three servers.
 
-## Configuring the Master/Slave Architecture
+## Configuring the Master/Subordinate Architecture
 
 This part of the setup will need a little more hard work because requires attention to detail but don't worry, let's go step by step.
 
