update wildfly kubernetes content

--- a/_posts/2020-01-04-k8s-ha-1.md
+++ b/_posts/2020-01-04-k8s-ha-1.md
@@ -16,17 +16,17 @@ I assume you already have a Kubernetes cluster so let's just focus on WildFly se
 The first step is to create a repository that will contain all our files:
 
 {% highlight bash %}
-[root@workstation ~]# mkdir wildfly18-kubeping
-[root@workstation ~]# mkdir -p wildfly18-kubeping/application
-[root@workstation ~]# mkdir -p wildfly18-kubeping/configuration
-[root@workstation ~]# mkdir -p wildfly18-kubeping/kubernetes
+[root@workstation ~]# mkdir wildfly20-kubeping
+[root@workstation ~]# mkdir -p wildfly20-kubeping/application
+[root@workstation ~]# mkdir -p wildfly20-kubeping/configuration
+[root@workstation ~]# mkdir -p wildfly20-kubeping/kubernetes
 {% endhighlight %}
 
 Then create Dockerfile with the necessary steps for image customization:
 
 {% highlight bash %}
-[root@workstation ~]# vi wildfly18-kubeping/Dockerfile
-FROM jboss/wildfly:18.0.1.Final
+[root@workstation ~]# vi wildfly20-kubeping/Dockerfile
+FROM jboss/wildfly:20.0.0.Final
 
 LABEL MAINTAINER Mauricio Magnani <msmagnanijr@gmail.com>
 
@@ -46,7 +46,7 @@ EXPOSE 8080 9990 7600 8888
 In the same directory, create the file "config-server.cli" which will contain the steps to configure kubeping correctly:
 
 {% highlight bash %}
-[root@workstation ~]# vi wildfly18-kubeping/configuration/config-server.cli
+[root@workstation ~]# vi wildfly20-kubeping/configuration/config-server.cli
 ###start the server in admin-only mode, using/modifying standalone-full-ha.xml
 embed-server --server-config=standalone-full-ha.xml --std-out=echo
 
@@ -72,13 +72,13 @@ stop-embedded-server
 Now put the "package of your application" to the directory "application"
 
 {% highlight bash %}
-[root@workstation ~]# cp cluster.war wildfly18-kubeping/application
+[root@workstation ~]# cp cluster.war wildfly20-kubeping/application
 {% endhighlight %}
 
-The next step is to create all Kubernetes objects so we can do the tests later(ps: I'm using the namespace "labs"):
+The next step is to create all Kubernetes objects so we can do the tests later. I'm using the namespace "labs":
 
 {% highlight yaml %}
-[root@workstation ~]# vi wildfly18-kubeping/kubernetes/01-wildfly-sa-role.yaml
+[root@workstation ~]# vi wildfly20-kubeping/kubernetes/01-wildfly-sa-role.yaml
 
 apiVersion: v1
 kind: ServiceAccount
@@ -109,7 +109,7 @@ subjects:
   name: jgroups-kubeping-service-account
   namespace: labs
 
-[root@workstation ~]# vi wildfly18-kubeping/kubernetes/02-wildfly-deployment.yaml
+[root@workstation ~]# vi wildfly20-kubeping/kubernetes/02-wildfly-deployment.yaml
 
 apiVersion: apps/v1
 kind: Deployment
@@ -134,7 +134,7 @@ spec:
       serviceAccountName: jgroups-kubeping-service-account
       containers:
         - name: kube-ping
-          image: mmagnani/wildfly18-kubeping:latest
+          image: mmagnani/wildfly20-kubeping:latest
           command: ["/opt/jboss/wildfly/bin/standalone.sh"]
           args: ["--server-config", "standalone-full-ha.xml", "-b", $(POD_IP), "-bmanagement", $(POD_IP) ,"-bprivate", $(POD_IP) ]
           resources:
@@ -161,8 +161,10 @@ spec:
                   fieldPath: metadata.namespace
             - name: KUBERNETES_LABELS 
               value: app=wildfly
+            - name: JAVA_OPTS
+              value: -Djdk.tls.client.protocols=TLSv1.2
 
-[root@workstation ~]# vi wildfly18-kubeping/kubernetes/03-wildfly-service.yaml
+[root@workstation ~]# vi wildfly20-kubeping/kubernetes/03-wildfly-service.yaml
 
 apiVersion: v1
 kind: Service
@@ -181,7 +183,7 @@ spec:
     app: wildfly
     tier: devops
 
-[root@workstation ~]# vi wildfly18-kubeping/kubernetes/04-wildfly-ingress.yaml
+[root@workstation ~]# vi wildfly20-kubeping/kubernetes/04-wildfly-ingress.yaml
 
 ---
 apiVersion: extensions/v1beta1
@@ -204,39 +206,32 @@ spec:
 Now just run the image build and push this to the docker hub or any other "registry":
 
 {% highlight bash %}
-[root@workstation ~]# docker build -t mmagnani/wildfly18-kubeping:latest . 
-[root@workstation ~]# docker push mmagnani/wildfly18-kubeping
+[root@workstation ~]# docker build -t mmagnani/wildfly20-kubeping:latest . 
+[root@workstation ~]# docker push mmagnani/wildfly20-kubeping
 {% endhighlight %}
 
 In the context of your Kubernetes cluster just create those objects:
 
 {% highlight bash %}
 [root@k8s-master kubernetes]# kubelet --version
-Kubernetes v1.16.1
+Kubernetes v1.18.3
 [root@k8s-master kubernetes]# pwd
-/root/workspace/wildfly18-kubeping/kubernetes
-[root@k8s-master kubernetes]# kubectl create -f .
+/root/wildfly20-kubeping/kubernetes
+[root@k8s-master kubernetes]# kubectl create -f . -n labs
 [root@k8s-master kubernetes]# kubectl get pods -n labs
 NAME                      READY   STATUS    RESTARTS   AGE
-wildfly-fd6dfb6cd-nm4pf   1/1     Running   0          28m
-wildfly-fd6dfb6cd-vvzwh   1/1     Running   0          28m
+wildfly-cc8b9546f-df9sw   1/1     Running   0          48s
+wildfly-cc8b9546f-scfdp   1/1     Running   0          48s
 {% endhighlight %}
 
 Check the logs, you should find two members as we only define 2 replicas:
 
 {% highlight bash %}
-[root@k8s-master kubernetes]# kubectl logs -f wildfly-fd6dfb6cd-nm4pf -n labs
+[root@k8s-master kubernetes]# kubectl logs -f wildfly-cc8b9546f-df9sw -n labs
 
-13:15:39,705 INFO  [org.jboss.as] (Controller Boot Thread) WFLYSRV0025: WildFly Full 18.0.1.Final (WildFly Core 10.0.3.Final) started in 10972ms - Started 570 of 776 services (477 services are lazy, passive or on-demand)
-13:16:17,782 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN000094: Received new cluster view for channel kubernetes: [wildfly-fd6dfb6cd-6lvr4|1] (2) [wildfly-fd6dfb6cd-6lvr4, wildfly-fd6dfb6cd-zw6j2]
-13:16:17,786 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN100000: Node wildfly-fd6dfb6cd-zw6j2 joined the cluster
-13:16:17,788 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN000094: Received new cluster view for channel kubernetes: [wildfly-fd6dfb6cd-6lvr4|1] (2) [wildfly-fd6dfb6cd-6lvr4, wildfly-fd6dfb6cd-zw6j2]
-13:16:17,788 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN100000: Node wildfly-fd6dfb6cd-zw6j2 joined the cluster
-13:16:17,789 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN000094: Received new cluster view for channel kubernetes: [wildfly-fd6dfb6cd-6lvr4|1] (2) [wildfly-fd6dfb6cd-6lvr4, wildfly-fd6dfb6cd-zw6j2]
-13:16:17,790 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN100000: Node wildfly-fd6dfb6cd-zw6j2 joined the cluster
-13:16:17,790 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN000094: Received new cluster view for channel kubernetes: [wildfly-fd6dfb6cd-6lvr4|1] (2) [wildfly-fd6dfb6cd-6lvr4, wildfly-fd6dfb6cd-zw6j2]
-13:16:17,790 INFO  [org.infinispan.CLUSTER] (thread-5,null,wildfly-fd6dfb6cd-6lvr4) ISPN100000: Node wildfly-fd6dfb6cd-zw6j2 joined the cluster
-13:16:18,758 INFO  [org.infinispan.CLUSTER] (remote-thread--p3-t1) [Context=default-server] ISPN100002: Starting rebalance with members [wildfly-fd6dfb6cd-6lvr4, wildfly-fd6dfb6cd-zw6j2], phase READ_OLD_WRITE_ALL, topology id 2
+14:23:33,253 INFO  [org.infinispan.CLUSTER] (MSC service thread 1-2) ISPN000078: Starting JGroups channel kubernetes
+14:23:33,253 INFO  [org.infinispan.CLUSTER] (MSC service thread 1-2) ISPN000094: Received new cluster view for channel kubernetes: [wildfly-cc8b9546f-scfdp|1] (2) [wildfly-cc8b9546f-scfdp, wildfly-cc8b9546f-df9sw]
+
 {% endhighlight %}
 
 As I am using "Traefik" my "ingress" is available:
@@ -246,23 +241,3 @@ As I am using "Traefik" my "ingress" is available:
 In the application it is also possible to add object to the session:
 
 ![](/images/202001-kubeha-02.png)
-
-All files are available in the repository: https://github.com/msmagnanijr/wildfly18-kubeping.git
-
-## Issue on Kubernetes 1.17
-
-Unfortunately these settings will not work in Kubernetes 1.17 as there is a mismatch between TLS 1.3 Kubernetes/Golang and TLS 1.2 from Java/WildFly. In the logs you will see something like this:
-
-{% highlight bash %}
-12:39:26,943 WARN  [org.jgroups.protocols.kubernetes.KUBE_PING] (thread-10,kubernetes,wildfly-deployment-f8d595bb5-s6ljn) failed getting JSON response from Kubernetes Client[masterUrl=https://kubernetes.default.svc:443/api/v1, headers={Authorization=#MASKED:999#}, connectTimeout=5000, readTimeout=30000, operationAttempts=3, operationSleep=1000, streamProvider=org.jgroups.protocols.kubernetes.stream.InsecureStreamProvider@39127235] for cluster [kubernetes], namespace [labs], labels [app=wildfly]; encountered [java.lang.Exception: 3 attempt(s) with a 1000ms sleep to execute [OpenStream] failed. Last failure was [javax.net.ssl.SSLHandshakeException: extension (5) should not be presented in certificate_request]]
-{% endhighlight %}
-
-For more information please check:
-
-* https://bugs.openjdk.java.net/browse/JDK-8234949
-* https://github.com/golang/go/issues/35722
-
-
-If you have any questions or suggestions let me know.
-
-Best,
